style : fixed the distortion in small images

--- a/pages/avatar/avatar.css
+++ b/pages/avatar/avatar.css
@@ -3,6 +3,7 @@
   height: 50px;
   border-radius: 50%;
   margin: 10px;
+  object-fit: cover;
 }
 .example-container-flex {
   display: flex;
